# cal-filter

./: .gitignore  LICENSE  README.md  apple-cal-to-ics.py  config.yaml.example  ics-filter.py  pyproject.toml
