[project]
name = "calfilter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "coloredlogs>=15.0.1",
    "ics>=0.7.3",
    "markdownify>=1.2.2",
    "pyyaml>=6.0.3",
    "requests>=2.34.2",
    "requests-cache>=1.3.2",
]
